# raid_shadow_legends_manager

./: .gitignore  config.ini  setup.cfg
rsl_manager/db_objs/: __init__.py  _db_core.py  artifact.py  champion.py  ratings.py  utilities.py
rsl_manager/enums/: __init__.py  named_int_enum.py
rsl_manager/web/: ratings.py
scripts/: download_artifacts.py  get_champion_ratings.py  process_artifacts.py  process_owned_champions.py  scrape_champion_ratings.py  scrape_champions.py  shard_odds.py
