[metadata]
name = rsl_manager
version = 0.0.1
author = Patrick McQuay
author_email = patrick.mcquay@gmail.com
description = Pyhton package to locally manage champions and artifacts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]∂
packages = 
    rsl_manager
    scripts
python_requires = >=3.8
install_requires = 
    requests
    raidtoolkit
    websocket-client
    SQLAlchemy
    beautifulsoup4

[options.packages.find]
where = rsl_manager

[options.entry_points]
console_scripts =
    scrape-champions = scripts.scrape_champions:main
    scrape-champion-ratings = scripts.scrape_champion_ratings:main
    process-owned-champions = scripts.process_owned_champions:main
    process-artifacts = scripts.process_artifacts:main
    get-champion-ratings = scripts.get_champion_ratings:main
    shard-odds = scripts.shard_odds:main
